--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
     <string name="stop">Stop</string>
+    <string name="total_time">Total:</string>
+    <string name="today_time">Today:</string>
+    <string name="week_time">Week:</string>
+    <string name="month_time">Month:</string>
 </resources>
